as displayed in the "Nested Tree Mode".
[1249433] Startup state for Nested Tree mode - User can now select startup
as a) All groups collapsed (previous behaviour); b) All groups expanded;
or c) Same state as when the database was last saved (could be either all
collapsed, all expanded or a mixture of some groups expanded and others
collapsed).

Changes to Existing Features in 3.03
====================================
[1532368] increase password history - now maximum is limited by
corresponding field in the database - i.e. 1 byte = 255.

Bugs fixed in 3.03
==================
[1527029] Password count not visible in status bar.
[1529305] Crash in Password History
[] View Menu item "Collapse All" did not collapse all embedded groups.

New Features for 3.02
=====================
[] Export/import to/from XML supported.
[] Selective text export.
[705515,1120236,1487001] Password history can now be saved for selected
entries.
[1516674] Ability to hide password during Add & Edit entry. If hidden,
password needs to be entered twice to verify.
[1506320] Count of passwords stored in DB on status bar. Also indication
of read/only status.
[] Compare of two databases supported

Changes to Existing Features in 3.02
====================================
[] Minimum master passphrase length is now 8 characters, and user is
not offered the option of accepting weak passphrases.
[] "Save on minimize" option removed

Bugs fixed in 3.02
==================
[1503123] Exits cleanly from lock with open dialog box.
[1503075,1520110] No longer crashes when number of last databases is
set to zero.
[1507847] Merge databases now merges all the record's fields, thanks
to n0tig.
[1513482] Preferences now saved in the .psafe3 file
[1504107] No longer saves cleared database
[1515994] User is now prompted to save database on system shutdown
[1519227] Password expires date was set wrong
[1519850] Double-click on group entry in tree did not expand/collapse
group