@@ -244,7 +244,7 @@ BEGIN
         RIGHTMARGIN, 216
         VERTGUIDE, 17
         TOPMARGIN, 7
-        BOTTOMMARGIN, 119
+        BOTTOMMARGIN, 140
         HORZGUIDE, 24
         HORZGUIDE, 38
         HORZGUIDE, 56
@@ -790,7 +790,7 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,35,125,10
 END
 
-IDD_PS_PASSWORDPOLICY DIALOGEX 0, 0, 223, 135
+IDD_PS_PASSWORDPOLICY DIALOGEX 0, 0, 223, 156
 STYLE DS_SETFONT | WS_CHILD | WS_DISABLED | WS_CAPTION | WS_SYSMENU
 CAPTION "Password Policy"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
@@ -799,7 +799,7 @@ BEGIN
                     79,8
     EDITTEXT        IDC_DEFPWLENGTH,100,17,27,12,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "",IDC_PWLENSPIN,"msctls_updown32",UDS_SETBUDDYINT | 
-                    UDS_ARROWKEYS | UDS_NOTHOUSANDS,127,17,9,15,
+                    UDS_ARROWKEYS | UDS_NOTHOUSANDS,127,16,9,15,
                     WS_EX_CLIENTEDGE
     CONTROL         "Use hexadecimal digits only (0-9,a-f)",IDC_USEHEXDIGITS,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,18,96,140,10
@@ -814,13 +814,18 @@ BEGIN
     CONTROL         "Use only easy-to-read characters (i.e., no  'l', '1', etc.)",
                     IDC_EASYVISION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,18,
                     83,189,10
-    CONTROL         "Save password history by default",IDC_SAVEPWHISTORY,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,118,119,10
     GROUPBOX        "Random password generation rules",IDC_STATIC,7,7,209,
                     104
+    CONTROL         "Save password history by default",IDC_SAVEPWHISTORY,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,18,118,119,10
+    LTEXT           "Default number to be saved per entry:",IDC_STATIC,23,132,120,8
+    EDITTEXT        IDC_DEFPWHNUM,149,130,27,12,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "",IDC_PWHSPIN,"msctls_updown32",UDS_SETBUDDYINT |
+                    UDS_ARROWKEYS | UDS_NOTHOUSANDS,177,129,11,15,WS_EX_CLIENTEDGE
+    GROUPBOX        "",IDC_STATIC,7,110,209,40
 END
 
-IDD_PS_MISC DIALOGEX 0, 0, 229, 135
+IDD_PS_MISC DIALOGEX 0, 0, 229, 149
 STYLE DS_SETFONT | WS_CHILD | WS_DISABLED | WS_CAPTION | WS_SYSMENU
 CAPTION "Misc"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
@@ -839,15 +844,16 @@ BEGIN
                     WS_TABSTOP,53,68,80,14
     CONTROL         "Hot Key",IDC_HOTKEY_ENABLE,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,7,70,43,10
-    LTEXT           "Double-click on entry:",IDC_STATIC,19,86,70,8
+    LTEXT           "Double-click on entry:",IDC_STATIC,9,91,70,8
     CONTROL         "Copies password to clipboard",IDC_DOUBLE_CLICK_COPIES,
-                    "Button",BS_AUTORADIOBUTTON | WS_GROUP,93,87,108,10
+                    "Button",BS_AUTORADIOBUTTON | WS_GROUP,83,92,108,10
     CONTROL         "View/Edit selected entry",IDC_DOUBLE_CLICK_EDITS,"Button",
-                    BS_AUTORADIOBUTTON,93,99,105,10
+                    BS_AUTORADIOBUTTON,83,104,105,10
     CONTROL         "Autotype",IDC_DOUBLE_CLICK_AUTOTYPES,"Button",
-                    BS_AUTORADIOBUTTON,93,111,72,10
+                    BS_AUTORADIOBUTTON,83,116,72,10
     CONTROL         "Browse to URL",IDC_DOUBLE_CLICK_BROWSE,"Button",
-                    BS_AUTORADIOBUTTON,93,123,72,10
+                    BS_AUTORADIOBUTTON,83,128,72,10
+    GROUPBOX        "",IDC_STATIC,6,83,218,59
 END
 
 IDD_EXPORT_TEXT DIALOGEX 0, 0, 275, 149
